Amarok ChangeLog
================
(C) 2002-2010 the Amarok authors.


VERSION 2.4-Beta 1
  FEATURES:
    * Added map view and calendar in the upcoming events applet.
    * Added support for all Wikipedia languages. (BR 220617)
    * Added incremental search in the Wikipedia applet (press
      '/' or global search key when in focus).
    * Added "Favorite Venues" to the upcoming events applet.
    * Read MusicBrainz IDs of MP4 files during scanning.
    * Ability to hide and show the menu bar. Patch by 
      Valentyn Pavliuchenko <valentyn.pavliuchenko@gmail.com>.
    * Size of OSD font is now configurable. (BR 195186)
    * Musicbrainz-based mass tagging UI by Sergey Ivanov.
    * New easy to use table-based UI for Ampache server configuration. (BR 200703)
    * OPML export for podcast subscriptions. (BR 126120)
    * New "Playlist Length" constraint for the APG, which allows you to specify
      the number of tracks in the playlist.  What was the "Playlist Length "
      constraint is now called "Playlist Duration".
    * MPRIS2 support for controlling Amarok over D-Bus.
    * New "Playdar Collection" allows searching for and listening
      to music provided by a running local Playdar service.

  CHANGES:
    * Better scrolling in the applet explorer.
    * The default moodbar style now uses system colors.
    * Added tray icon context-menu action to open the preferences dialog.
    * Show a progress bar while loading pages in the Wikipedia applet.
    * Added option to right-align "year" in the albums applet.
    * Improved alignment of tracks in the albums applet.
    * Scroll to the current album and make its tracks visible in the albums
      applet. (BR 187011)
    * Added ability to expand/collapse/drag disc items in the albums applet.
      (BR 249488)
    * Improved appearance of similar artist, upcoming events, and Wikipedia
      applets.
    * Improved presentation of suggested lyrics (currently only 3rd party
      scripts use).