@@ -5,6 +5,7 @@ Amarok ChangeLog
 
 VERSION 2.4-Beta 1
   FEATURES:
+    * Added ability to set/update Album Artist.
     * Added map view and calendar in the upcoming events applet.
     * Added support for all Wikipedia languages. (BR 220617)
     * Added incremental search in the Wikipedia applet (press
